tests/ui/traits/const-traits/const-traits-result.stderr
error[E0015]: cannot call non-const method `<std::result::Iter<'_, u8> as Iterator>::next` in constants
  --> $DIR/const-traits-result.rs:36:53
   |
LL |     let _iter_ok: Option<&u8>      = (&r_ok).iter().next();
   |                                                     ^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const method `<std::result::IterMut<'_, u8> as Iterator>::next` in constants
  --> $DIR/const-traits-result.rs:39:58
   |
LL |     let _iter_mut: Option<&mut u8> = r_ok_mut.iter_mut().next();
   |                                                          ^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
